--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -35,6 +35,7 @@
   top: var(--#{$prefix}ref-spacer-3);
 }
 
+// stylelint-disable-next-line selector-class-pattern
 .d-carousel .splide__track .splide__list {
   height: auto;
 }
@@ -68,6 +69,6 @@
 
   .selected {
     position: relative;
-    background-color: rgba(var(--#{$prefix}gray-200-rgb), 0.5);
+    background-color: rgba(var(--#{$prefix}gray-200-rgb), .5);
   }
 }
