--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,26 +11,6 @@
   height: 100%;
 }
 
-.frequent-collapse {
-  .collapse-body {
-    padding-bottom: 0;
-  }
-
-  .frequent-collapse-actions {
-    .btn {
-      padding-block: 0;
-    }
-  }
-}
-
-.collapse-button-activity {
-  width: var(--#{$prefix}ref-spacer-6);
-  height: var(--#{$prefix}ref-spacer-6);
-  aspect-ratio: 1/1;
-  background: rgba(var(--#{$prefix}secondary-rgb), .1);
-  border-radius: 50%;
-}
-
 .quick-transfer {
   position: sticky;
   top: var(--#{$prefix}ref-spacer-3);
@@ -60,7 +40,7 @@
     overflow: hidden;
   }
 
-  d-quick-action-button:not(:last-child) .d-quick-action-button {
+  .d-quick-action-button:not(:last-child) .d-quick-action-button {
     --#{$prefix}quick-action-button-border-bottom: 1px solid var(--#{$prefix}gray-300);
 
     &:active {
